# ImageFilter

./: .gitignore  CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cpp
benchmarker/: CMakeLists.txt  main.cpp
cmake/: LTO.cmake  Sanitizers.cmake  Tools.cmake  Warnings.cmake
configured/: config.hpp.in
kernels/: boxFilter.txt
libs/: CMakeLists.txt
libs/benchmarker/: Benchmarker.cpp  Benchmarker.hpp  CMakeLists.txt
libs/imagefilter/: CMakeLists.txt  imagefilter.cpp  imagefilter.hpp
libs/imagefilter/Abstract/: AbstractFilter.cpp  AbstractFilter.hpp  AbstractFilterCUDA.cu  AbstractFilterCUDA.hpp  CUDARunTimeConfig.hpp
libs/imagefilter/Box/: BoxFilter.cpp  BoxFilter.hpp  BoxFilterCUDA.cu  BoxFilterCUDA.hpp
libs/imagefilter/GenericFilter/: GenericFilter.cpp  GenericFilter.hpp  GenericFilterCUDA.cu  GenericFilterCUDA.hpp
libs/imagefilter/Laplacian/: LaplacianFilter.cpp  LaplacianFilter.hpp  LaplacianFilterCUDA.cu  LaplacianFilterCUDA.hpp
libs/imagefilter/Median/: MedianBlurFilter.cpp  MedianBlurFilter.hpp  MedianBlurFilterCUDA.cu  MedianBlurFilterCUDA.hpp
libs/imagefilter/Sharpening/: SharpeningFilter.cpp  SharpeningFilter.hpp  SharpeningFilterCUDA.cu  SharpeningFilterCUDA.hpp
libs/imagefilter/SobelEdgeDetection/: SobelEdgeDetectionFilter.cpp  SobelEdgeDetectionFilter.hpp  SobelEdgeDetectionFilterCUDA.cu  SobelEdgeDetectionFilterCUDA.hpp
libs/imagefilter/TotalVariation/: TotalVariationFilter.cpp  TotalVariationFilter.hpp  TotalVariationFilterCUDA.cu  TotalVariationFilterCUDA.hpp
libs/imagefilter/test/: CMakeLists.txt  main.cpp  test.cpp  testBoxFilterCUDA.cpp
